--- a/app/ui/cards-list/styles.module.css
+++ b/app/ui/cards-list/styles.module.css
@@ -19,3 +19,9 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media (max-width: 320px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
