--- a/app/ui/title/styles.module.css
+++ b/app/ui/title/styles.module.css
@@ -53,3 +53,17 @@
     margin-left: 38%;
   }
 }
+
+@media (max-width: 320px) {
+  .title {
+    font-size: 24px;
+  }
+
+  .description {
+    font-size: 20px;
+  }
+
+  .subtitle {
+    font-size: 15px;
+  }
+}
